Updated Navigation Options

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <body>
     <nav>
       <ul>
-        <ul>Link 1</ul>
-        <ul>Link 2</ul>
+        <li>Home</li>
+        <li>Gallery</li>
+        <li>Contact Me</li>
+        <li>About Me</li>
+
       </ul>
     </nav>
 
