--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <ul>
-        <li>Home</li>
+        <li><a href="index.html" class="active">Home</a></li>
         <li>Gallery</li>
         <li>Contact Me</li>
         <li>About Me</li>
