Nav Bar Updates

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <nav>
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li>Gallery</li>
-        <li>Contact Me</li>
-        <li>About Me</li>
+        <li><a  class="active" href="index.html">HOME</a></li>
+        <li><a href="./gallery.html">GALLERY</a></li>
+        <li>CONTACT</li>
+        <li>ABOUT</li>
 
       </ul>
     </nav>
