nav bar progress

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <ul>
         <li><a  class="active" href="index.html">HOME</a></li>
         <li><a href="./gallery.html">GALLERY</a></li>
-        <li>CONTACT</li>
-        <li>ABOUT</li>
+        <li><a>CONTACT</a></li>
+        <li><a>ABOUT</a></li>
 
       </ul>
     </nav>
