--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <nav>
       <ul>
         <li><a  class="active" href="index.html">HOME</a></li>
-        <li><a href="./gallery.html">GALLERY</a></li>
+        <li><a href="pages/gallery.html">GALLERY</a></li>
         <li><a>CONTACT</a></li>
         <li><a>ABOUT</a></li>
 
