--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -1,1 +1,26 @@
-<html></html>
+<html>
+</<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../css\styles.css">
+    <title>standard title</title>
+  </head>
+  <nav>
+    <ul>
+      <li><a href="../index.html">HOME</a></li>
+      <li><a class="active" href="./gallery.html">GALLERY</a></li>
+      <li><a>CONTACT</a></li>
+      <li><a>ABOUT</a></li>
+
+    </ul>
+  </nav>
+  <hr/>
+  <body>
+
+
+    <h1>Gallery</h1>
+    <p>Welcome to the Gallery!</p>
+
+  </body>
+</html>
