Major updates to HTML templates.

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,1 +1,27 @@
 
+<html>
+</<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../css\styles.css">
+    <title>standard title</title>
+  </head>
+  <nav>
+    <ul>
+      <li><a href="../index.html">HOME</a></li>
+      <li><a href="./gallery.html">GALLERY</a></li>
+      <li><a href="./contact.html">CONTACT</a></li>
+      <li><a class="active" href="./about.html">ABOUT</a></li>
+
+    </ul>
+  </nav>
+  <hr/>
+  <body>
+
+
+    <h1>About Me</h1>
+    <p>Hi! I'm Kenny!</p>
+
+  </body>
+</html>
