--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <ul>
       <li><a  class="active" href="index.html">HOME</a></li>
       <li><a href="pages/gallery.html">GALLERY</a></li>
-      <li><a>CONTACT</a></li>
-      <li><a>ABOUT</a></li>
+      <li><a href="pages/contact.html">CONTACT</a></li>
+      <li><a href="pages/about.html">ABOUT</a></li>
 
     </ul>
   </nav>
