--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,1 +1,27 @@
 
+<html>
+</<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../css\styles.css">
+    <title>standard title</title>
+  </head>
+  <nav>
+    <ul>
+      <li><a href="../index.html">HOME</a></li>
+      <li><a href="./gallery.html">GALLERY</a></li>
+      <li><a class="active" href="./contact.html">CONTACT</a></li>
+      <li><a href="./about.html">ABOUT</a></li>
+
+    </ul>
+  </nav>
+  <hr/>
+  <body>
+
+
+    <h1>Contact Me!</h1>
+    <p>Contact Form Goes Here</p>
+
+  </body>
+</html>
