--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -10,8 +10,8 @@
     <ul>
       <li><a href="../index.html">HOME</a></li>
       <li><a class="active" href="./gallery.html">GALLERY</a></li>
-      <li><a>CONTACT</a></li>
-      <li><a>ABOUT</a></li>
+      <li><a href="./contact.html">CONTACT</a></li>
+      <li><a href="./about.html">ABOUT</a></li>
 
     </ul>
   </nav>
