Layout updates in HTML, adding sections with DIVs

--- a/index.html
+++ b/index.html
@@ -6,21 +6,36 @@
     <link rel="stylesheet" type="text/css" href="css\styles.css">
     <title>standard title</title>
   </head>
-  <nav>
-    <ul>
-      <li><a  class="active" href="index.html">HOME</a></li>
-      <li><a href="pages/gallery.html">GALLERY</a></li>
-      <li><a href="pages/contact.html">CONTACT</a></li>
-      <li><a href="pages/about.html">ABOUT</a></li>
+  <div class="main-header">
+    <h1>Uh. Title</h1>
+  </div>
+  <div class="main-nav">
+    <nav>
+      <ul>
+        <li><a  class="active" href="index.html">HOME</a></li>
+        <li><a href="pages/gallery.html">GALLERY</a></li>
+        <li><a href="pages/contact.html">CONTACT</a></li>
+        <li><a href="pages/about.html">ABOUT</a></li>
 
-    </ul>
-  </nav>
+      </ul>
+    </nav>
+  </div>
+
   <hr/>
-  <body>
+
+  <div class="main-content">
+    <body>
 
 
-    <h1>Hello</h1>
-    <p>hello world!</p>
 
-  </body>
+      <p>hello world!</p>
+
+    </body>
+  </div>
+
+  <div class="dasfooter">
+    <footer>
+
+    </footer>
+  </div>
 </html>
