Fixed layout/header issues

--- a/pages/about.html
+++ b/pages/about.html
@@ -17,11 +17,19 @@
     </ul>
   </nav>
   <hr/>
-  <body>
+  <div class="main-content">
+    <body>
 
 
-    <h1>About Me</h1>
-    <p>Hi! I'm Kenny!</p>
 
-  </body>
-</html>
+      <p>hello world!</p>
+
+    </body>
+  </div>
+
+  <div class="dasfooter">
+    <footer>
+
+    </footer>
+  </div>
+  </html>
