--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -16,11 +16,19 @@
     </ul>
   </nav>
   <hr/>
-  <body>
+  <div class="main-content">
+    <body>
 
 
-    <h1>Gallery</h1>
-    <p>Welcome to the Gallery!</p>
 
-  </body>
-</html>
+      <p>hello world!</p>
+
+    </body>
+  </div>
+
+  <div class="dasfooter">
+    <footer>
+
+    </footer>
+  </div>
+  </html>
