Fixed layout/header issues

--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" type="text/css" href="../css\styles.css">
     <title>standard title</title>
   </head>
+  <div class="main-header">
+    <h1>Uh. Title</h1>
+  </div>
   <nav>
     <ul>
       <li><a href="../index.html">HOME</a></li>
