--- a/index.html
+++ b/index.html
@@ -6,33 +6,33 @@
     <link rel="stylesheet" type="text/css" href="css\styles.css">
     <title>standard title</title>
   </head>
-  <div class="main-header">
-    <h1>Uh. Title</h1>
-  </div>
-  <div class="main-nav">
-    <nav>
-      <ul>
-        <li><a  class="active" href="index.html">HOME</a></li>
-        <li><a href="pages/gallery.html">GALLERY</a></li>
-        <li><a href="pages/contact.html">CONTACT</a></li>
-        <li><a href="pages/about.html">ABOUT</a></li>
+<!-- PAGENAME/NAVBAR -->
+  <div class="navbar clearfix">
+    <div class="main-header">
+      <h1>Kenny\Welcome!</h1>
+    </div>
+    <div class="main-nav">
+      <nav>
+        <ul>
+          <li><a  class="active" href="index.html">HOME</a></li>
+          <li><a href="pages/gallery.html">GALLERY</a></li>
+          <li><a href="pages/contact.html">CONTACT</a></li>
+          <li><a href="pages/about.html">ABOUT</a></li>
 
-      </ul>
-    </nav>
+        </ul>
+      </nav>
+    </div>
   </div>
-
   <hr/>
 
+<!-- MAIN CONTENT / BODY -->
   <div class="main-content">
     <body>
-
-
-
       <p>hello world!</p>
-
     </body>
   </div>
 
+<!-- Footer -->
   <div class="dasfooter">
     <footer>
 
