--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -7,7 +7,7 @@
     <title>standard title</title>
   </head>
   <div class="main-header">
-    <h1>Uh. Title</h1>
+    <h1>Kenny\Gallery</h1>
   </div>
   <nav>
     <ul>
