--- a/pages/about.html
+++ b/pages/about.html
@@ -8,7 +8,7 @@
     <title>standard title</title>
   </head>
   <div class="main-header">
-    <h1>Uh. Title</h1>
+    <h1>Kenny\About</h1>
   </div>
   <nav>
     <ul>
