updated CSS/HTML for Nav Bar - Working towards a more uniform Nav Bar

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>standard title</title>
   </head>
 <!-- PAGENAME/NAVBAR -->
-  <div class="navbar clearfix">
-    <div class="main-header">
+  <header class="navbar clearfix">
+    <div class="main-header nav-col">
       <h1>Kenny\Welcome!</h1>
     </div>
-    <div class="main-nav">
+    <div class="main-nav nav-col">
       <nav>
         <ul>
           <li><a  class="active" href="index.html">HOME</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </nav>
     </div>
-  </div>
+  </header>
   <hr/>
 
 <!-- MAIN CONTENT / BODY -->
