Pushes for "Mobile First" web devolopment/layout scheme coming together. added templates page for easy copy pasta.

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,38 +1,48 @@
-
 <html>
 </<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="../css\styles.css">
+    <link rel="stylesheet" type="text/css" href="..\css\styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="..\css\media.css"> -->
+    <!-- ICON LIBRARY - NOT MINE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>standard title</title>
   </head>
-  <div class="main-header">
-    <h1>Kenny/Contact</h1>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="../index.html">HOME</a></li>
-      <li><a href="./gallery.html">GALLERY</a></li>
-      <li><a class="active" href="./contact.html">CONTACT</a></li>
-      <li><a href="./about.html">ABOUT</a></li>
+<!-- PAGENAME/NAVBAR -->
+  <header class="navbar clearfix">
+    <div class="main-header nav-col">
+      <h1>Kenny\Welcome!</h1>
+    </div>
+    <div class="main-nav nav-col">
+      <nav>
+        <ul>
+          <!-- ADD CLASS .active to the <a> element for the green indicator  -->
+          <li><a href="../index.html">HOME</a></li>
+          <li><a href="./gallery.html">GALLERY</a></li>
+          <li><a class="active" href="./contact.html">CONTACT</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+        </ul>
+      </nav>
+    </div>
+      <hr/>
+  </header>
 
-    </ul>
-  </nav>
-  <hr/>
+
   <div class="main-content">
     <body>
-
-
-
       <p>hello world!</p>
-
     </body>
   </div>
 
-  <div class="dasfooter">
-    <footer>
 
-    </footer>
-  </div>
+  <!-- Footer -->
+    <div class="dasfooter">
+      <footer>
+        <a class="fa fa-facebook" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
+        <a class="fa fa-tumblr"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
+        <p>&copy Kenny's Copyright Placeholder Stuff</p>
+      </footer>
+    </div>
   </html>
