--- a/pages/template.html
+++ b/pages/template.html
@@ -22,20 +22,13 @@
           <li><a href="../index.html">HOME</a></li>
           <li><a href="./gallery.html">GALLERY</a></li>
           <li><a href="./contact.html">CONTACT</a></li>
-          <li><a class="active" href="./about.html">ABOUT</a></li>
+          <li><a href="./about.html">ABOUT</a></li>
+
         </ul>
       </nav>
     </div>
       <hr/>
   </header>
-
-
-
-  <div class="main-content">
-    <body>
-      <p>hello world!</p>
-    </body>
-  </div>
 
 
   <!-- Footer -->
