--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css\styles.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css\media.css"> -->
+    <!-- ICON LIBRARY - NOT MINE -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>standard title</title>
   </head>
 <!-- PAGENAME/NAVBAR -->
@@ -22,20 +26,34 @@
         </ul>
       </nav>
     </div>
+      <hr/>
   </header>
-  <hr/>
+
 
 <!-- MAIN CONTENT / BODY -->
   <div class="main-content">
     <body>
-      <p>hello world!</p>
+      <div class="cont-col primarycontent">
+        <h2>Lorems?</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </div>
+      <div class="cont-col secondarycontent">
+        <h2>Happy Little Lorums?</h2>
+        <p>
+          All you need to paint is a few tools, a little instruction, and a vision in your mind. These things happen automatically. All you have to do is just let them happen. All those little son of a guns. If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. You want your tree to have some character. Make it special. We'll have a super time.
+          Trees grow in all kinds of ways. They're not all perfectly straight. Not every limb is perfect. Every single thing in the world has its own personality - and it is up to you to make friends with the little rascals. Isn't it great to do something you can't fail at? They say everything looks better with odd numbers of things. But sometimes I put even numbers—just to upset the critics.
+          Use what happens naturally, don't fight it. Let's have a happy little tree in here. Everything's not great in life, but we can still find beauty in it. How to paint. That's easy. What to paint. That's much harder. Just a little indication. Steve wants reflections, so let's give him reflections. Follow the lay of the land. It's most important. With something so strong, a little bit can go a long way. Even trees need a friend. We all need friends.It's life. It's interesting. It's fun. Let's build some happy little clouds up here. We wash our brush with odorless thinner.You gotta think like a tree. That's crazy. If you don't think every day is a good day - try missing a few. You'll see. You have to allow the paint to break to make it beautiful. This is truly an almighty mountain. We artists are a different breed of people. We're a happy bunch. Now, we're going to fluff this cloud. Just make little strokes like that.
+        </p>
+      </div>
     </body>
   </div>
 
 <!-- Footer -->
   <div class="dasfooter">
     <footer>
-
+      <a class="fa fa-facebook" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
+      <a class="fa fa-tumblr"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
+      <p>&copy Kenny's Copyright Placeholder Stuff</p>
     </footer>
   </div>
 </html>
