Normalize added / removed fixed header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type"text/css" href="css\normalize.css">
     <link rel="stylesheet" type="text/css" href="css\styles.css">
     <!-- <link rel="stylesheet" type="text/css" href="css\media.css"> -->
     <!-- ICON LIBRARY - NOT MINE -->
@@ -11,7 +12,7 @@
     <title>standard title</title>
   </head>
 <!-- PAGENAME/NAVBAR -->
-  <header class="navbar clearfix">
+  <header class="navbar clearfix"  id="top">
     <div class="main-header nav-col">
       <h1>Kenny\Welcome!</h1>
     </div>
@@ -26,16 +27,16 @@
         </ul>
       </nav>
     </div>
-      <hr/>
-  </header>
 
+  </header>
+      <hr/>
 
 <!-- MAIN CONTENT / BODY -->
   <div class="main-content">
     <body>
       <div class="cont-col primarycontent">
         <h2>Lorems?</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
       <div class="cont-col secondarycontent">
         <h2>Happy Little Lorums?</h2>
@@ -51,9 +52,10 @@
 <!-- Footer -->
   <div class="dasfooter">
     <footer>
-      <a class="fa fa-facebook" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
-      <a class="fa fa-tumblr"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
-      <p>&copy Kenny's Copyright Placeholder Stuff</p>
+      <a class="fa fa-facebook social" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
+      <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
+      <a class="social" href="#top">"Top"</a>
+      <p>&copy Kenny's Copyright Placeholder Stuff // <a href="#top">Return to Top</a></p>
     </footer>
   </div>
 </html>
