--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <footer>
       <a class="fa fa-facebook social" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
       <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
-      <a class="social" href="#top">"Top"</a>
+      <a class="fa fa-instagram social"href="https://instagram.com/kennyisnt" target="_blank"></a>
       <p>&copy Kenny's Copyright Placeholder Stuff // <a href="#top">Return to Top</a></p>
     </footer>
   </div>
