--- a/pages/template.html
+++ b/pages/template.html
@@ -13,7 +13,7 @@
 <!-- PAGENAME/NAVBAR -->
   <header class="navbar clearfix">
     <div class="main-header nav-col">
-      <h1>Kenny\Welcome!</h1>
+      <h1>Kenny\PUTNAMEHEREDUMBDUMB</h1>
     </div>
     <div class="main-nav nav-col">
       <nav>
@@ -34,9 +34,10 @@
   <!-- Footer -->
     <div class="dasfooter">
       <footer>
-        <a class="fa fa-facebook" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
-        <a class="fa fa-tumblr"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
-        <p>&copy Kenny's Copyright Placeholder Stuff</p>
+        <a class="fa fa-facebook social" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
+        <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
+        <a class="fa fa-instagram social"href="https://instagram.com/kennyisnt" target="_blank"></a>
+        <p>&copy Kenny's Copyright Placeholder Stuff // <a href="#top">Return to Top</a></p>
       </footer>
     </div>
   </html>
