--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
       <div class="cont-col secondarycontent">
         <h2>Happy Little Lorums?</h2>
-        <script src="js.js"></script>
+        <script src="js/pokemon.js"></script>
         <p>
           All you need to paint is a few tools, a little instruction, and a vision in your mind. These things happen automatically. All you have to do is just let them happen. All those little son of a guns. If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. You want your tree to have some character. Make it special. We'll have a super time.
           Trees grow in all kinds of ways. They're not all perfectly straight. Not every limb is perfect. Every single thing in the world has its own personality - and it is up to you to make friends with the little rascals. Isn't it great to do something you can't fail at? They say everything looks better with odd numbers of things. But sometimes I put even numbers—just to upset the critics.
