--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="css\normalize.css">
     <link rel="stylesheet" type="text/css" href="css\styles.css">
-    <link rel="stylesheet" type="text/css" href="css\media.css">
+    <!-- <link rel="stylesheet" type="text/css" href="css\media.css"> -->
     <!-- ICON LIBRARY - NOT MINE -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
