pushing latest school files

--- a/SchoolProjects/index.html
+++ b/SchoolProjects/index.html
@@ -7,15 +7,17 @@
   <body>
     <h1 id="myHeading">JavaScript and the DOM</h1>
     <p>Making a web page interactive</p>
-    <p>Things that are purple:</p>
+
+    <p class='description'>Things that are purple:</p>
+    <input type='text' class='description'>
+    <button class='description'>Change List Description</button>
+    
     <ul>
-      <li>Grapes</li>
-      <li>Amethyst</li>
-      <li>Lavender</li>
-      <li>Plums</li>
+      <li>grapes</li>
+      <li>amethyst</li>
+      <li>lavender</li>
+      <li>plums</li>
     </ul>
-
     <script src="js.js"></script>
-
   </body>
 </html>
