--- a/index.html
+++ b/index.html
@@ -39,16 +39,27 @@
     <body>
       <div class="cont-col primarycontent">
         <h2>Lorems?</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
+        <p>Test</p>
+        </div>
       <div class="cont-col secondarycontent">
+
         <h2>Happy Little Lorums?</h2>
-        <script src="js/pokemon.js"></script>
-        <p>
-          All you need to paint is a few tools, a little instruction, and a vision in your mind. These things happen automatically. All you have to do is just let them happen. All those little son of a guns. If these lines aren't straight, your water's going to run right out of your painting and get your floor wet. You want your tree to have some character. Make it special. We'll have a super time.
-          Trees grow in all kinds of ways. They're not all perfectly straight. Not every limb is perfect. Every single thing in the world has its own personality - and it is up to you to make friends with the little rascals. Isn't it great to do something you can't fail at? They say everything looks better with odd numbers of things. But sometimes I put even numbers—just to upset the critics.
-          Use what happens naturally, don't fight it. Let's have a happy little tree in here. Everything's not great in life, but we can still find beauty in it. How to paint. That's easy. What to paint. That's much harder. Just a little indication. Steve wants reflections, so let's give him reflections. Follow the lay of the land. It's most important. With something so strong, a little bit can go a long way. Even trees need a friend. We all need friends.It's life. It's interesting. It's fun. Let's build some happy little clouds up here. We wash our brush with odorless thinner.You gotta think like a tree. That's crazy. If you don't think every day is a good day - try missing a few. You'll see. You have to allow the paint to break to make it beautiful. This is truly an almighty mountain. We artists are a different breed of people. We're a happy bunch. Now, we're going to fluff this cloud. Just make little strokes like that.
-        </p>
+        <table align="center">
+          <form>
+            <th colspan="2">Enter your DOB Below</th>
+              <tr><td>Enter Month</td><td><input type="text" value="01, 02 ... 12"></td></tr>
+              <tr><td>Enter Day</td><td><input type="text"></td></tr>
+              <tr><td>Enter Year</td><td><input type="text"></td></tr>
+              <tr>
+                <th colspan="2">
+                  <button class="pokeSubmit" type="submit"></button>
+                  <button class="reset" type="reset"></button>
+                </th>
+              </tr>
+          </form>
+        </table>
+      <script src="js/pokemon.js"></script>
+        <p>Stuff</p>
       </div>
     </body>
   </div>
