--- a/index.html
+++ b/index.html
@@ -11,45 +11,45 @@
 
     <title>standard title</title>
   </head>
-<!-- PAGENAME/NAVBAR -->
-  <header class="navbar clearfix"  id="top">
-    <div class="main-header nav-col">
-      <h1>Kenny\Welcome!</h1>
-    </div>
-    <div class="main-nav nav-col">
-      <nav>
-        <ul>
-          <li><a  class="active" href="index.html">HOME</a></li>
-          <li><a href="pages/gallery.html">GALLERY</a></li>
-          <li><a href="pages/contact.html">CONTACT</a></li>
-          <li><a href="pages/about.html">ABOUT</a></li>
 
-        </ul>
-      </nav>
-
-    </div>
-    <div class='hrbreak'>
-      <hr/>
-  </div>
-  </header>
 
 
 <!-- MAIN CONTENT / BODY -->
-  <div class="main-content">
-    <body>
+  <body>
+    <!-- PAGENAME/NAVBAR -->
+    <header class="navbar clearfix"  id="top">
+        <div class="main-header nav-col">
+          <h1>Kenny\Welcome!</h1>
+        </div>
+        <div class="main-nav nav-col">
+          <nav>
+            <ul>
+              <li><a  class="active" href="index.html">HOME</a></li>
+              <li><a href="pages/gallery.html">GALLERY</a></li>
+              <li><a href="pages/contact.html">CONTACT</a></li>
+              <li><a href="pages/about.html">ABOUT</a></li>
+
+            </ul>
+          </nav>
+
+        </div>
+        <div class='hrbreak'>
+          <hr/>
+      </div>
+    </header>
+    <div class="main-content">
       <div class="cont-col primarycontent">
         <h2>Lorems?</h2>
         <p>Test</p>
         </div>
       <div class="cont-col secondarycontent">
-
-        <h2>Happy Little Lorums?</h2>
+        <h2>The Quiz</h2>
         <table align="center">
           <form>
             <th colspan="2">Enter your DOB Below</th>
-              <tr><td>Enter Month</td><td><input type="text" value="01, 02 ... 12"></td></tr>
-              <tr><td>Enter Day</td><td><input type="text"></td></tr>
-              <tr><td>Enter Year</td><td><input type="text"></td></tr>
+              <tr><td>Enter Month</td><td><input type="text" class="pokeMonth" value="01, 02 ... 12"></td></tr>
+              <tr><td>Enter Day</td><td><input type="text" class="pokeDay" ></td></tr>
+              <tr><td>Enter Year</td><td><input type="text" class="pokeYear" ></td></tr>
               <tr>
                 <th colspan="2">
                   <button class="pokeSubmit" type="submit"></button>
@@ -61,13 +61,14 @@
       <script src="js/pokemon.js"></script>
         <p>Stuff</p>
       </div>
-    </body>
-  </div>
+    </div>
+  </body>
+
 
 <!-- Footer -->
   <div class="dasfooter">
     <footer>
-      <a class="fa fa-facebook social" href=https://www.facebook.com/kenneth.isnt target="_blank"></a>
+      <a class="fa fa-facebook social" href="https://www.facebook.com/kenneth.isnt" target="_blank"></a>
       <a class="fa fa-tumblr social"href="https://codelou-kenny.tumblr.com" target="_blank"></a>
       <a class="fa fa-instagram social"href="https://instagram.com/kennyisnt" target="_blank"></a>
       <p>&copy Kenny's Copyright Placeholder Stuff // <a href="#top">Return to Top</a></p>
