Fixed NavBar Placement/Floats

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
   <body>
     <!-- PAGENAME/NAVBAR -->
     <header class="navbar clearfix"  id="top">
-        <div class="main-header nav-row">
+        <div class="main-header nav-row nav-left">
           <h1>Kenny\Welcome!</h1>
         </div>
-        <div class="main-nav nav-row">
+        <div class="nav-row nav-right">
           <nav>
             <ul>
               <li><a  class="active" href="index.html">HOME</a></li>
@@ -33,9 +33,7 @@
           </nav>
 
         </div>
-        <div class='hrbreak'>
-          <hr/>
-      </div>
+        <hr/>
     </header>
     <div class="main-content">
       <div class="cont-col primarycontent">
