--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <hr/>
     </header>
-    <div class="main-content">
+    <div class="main-content clearfix">
       <div class="cont-col primarycontent">
         <h2>Lorems?</h2>
         <p>And that's when it becomes fun - you don't have to spend your time thinking about what's happening - you just let it happen. Mountains are so simple, they're hard. We start with a vision in our heart, and we put it on canvas.
