--- a/SchoolProjects/index.html
+++ b/SchoolProjects/index.html
@@ -23,8 +23,11 @@
       </ul>
       <input type='text' class='addItemInput'>
       <button class='addItemButton'>Add Item</button>
+      <button class='removeItemButton'>Remove Last Item</button>
+
     </div>
 
     <script src="js.js"></script>
+    <script src='temp.js'></script>
   </body>
 </html>
