--- a/SchoolProjects/index.html
+++ b/SchoolProjects/index.html
@@ -16,18 +16,15 @@
       <button class='description'>Change List Description</button>
 
       <ul>
-        <li>grapes</li>
-        <li>amethyst</li>
-        <li>lavender</li>
-        <li>plums</li>
+        <li>grapes<button>Remove</button></li>
+        <li>amethyst<button>Remove</button></li>
+        <li>lavender<button>Remove</button></li>
+        <li>plums<button>Remove</button></li>
       </ul>
       <input type='text' class='addItemInput'>
       <button class='addItemButton'>Add Item</button>
-      <button class='removeItemButton'>Remove Last Item</button>
-
     </div>
 
     <script src="js.js"></script>
-    <script src='temp.js'></script>
   </body>
 </html>
