--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <img alt="cats!" src="https://via.placeholder.com/300">
       <img alt="cats!" src="https://via.placeholder.com/300">
 
-
+      <script src="js/java.js"></script>
     </div>
 
   </body>
