--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li><a class="active" href="#">Home</a></li>
-          <li><a href="#">Gallery</a></li>
+          <li><a href="https://random.cat" target="_blank">Random Cat</a></li>
           <li><a href="#">Contact Me</a></li>
           <li><a href="#">About</a></li>
         </ul>
